--- a/CLIENT/src/pages/WishList/WishList.css
+++ b/CLIENT/src/pages/WishList/WishList.css
@@ -1,12 +1,6 @@
-.wishlist-card .cross {
-  top: 15px;
-  right: 15px;
-  width: 25px;
-  padding: 3px;
-  cursor: pointer;
-}
+
 .wishlist-card h5.title{
-  font-size: 15px;
+  font-size: 18px;
   line-height: 22px;
   font-weight: 500;
   color: var(--color-1c1c1b);
@@ -16,3 +10,100 @@
   line-height: 22px;
   font-weight: 400;
 }
+
+.wishlist-card-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+/* CSS */
+.get-wishlist {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* Chia container thành 4 cột bằng nhau */
+  gap: 20px; /* Khoảng cách giữa các sản phẩm */
+}
+
+.box-wishlist {
+  /* Thiết lập kích thước của các ô sản phẩm */
+  width: 100% !important;
+}
+
+.wishlist-card {
+  /* Thiết lập các thuộc tính của sản phẩm */
+  border: 1px solid #ccc; /* Đường viền 1 pixel màu xám nhạt */
+  padding: 10px; /* Khoảng cách nội dung từ đường viền */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Đổ bóng sản phẩm */
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+/* Hiệu ứng hover */
+.wishlist-card:hover {
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Đổ bóng lớn hơn khi di chuột qua sản phẩm */
+}
+
+.title-wishlist {
+  /* Thiết lập tiêu đề sản phẩm */
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.title {
+  /* Thiết lập loại sản phẩm */
+  font-size: 16px;
+  color: #333; /* Màu văn bản */
+}
+
+.price {
+  /* Thiết lập giá sản phẩm */
+  font-size: 16px;
+  color: #e74c3c; /* Màu giá sản phẩm (ví dụ: đỏ) */
+}
+
+.icons-delete-wishlist {
+  position: absolute;
+  top: -10px;
+  right: -8px;
+  font-size: 23px;
+  cursor: pointer;
+}
+
+/* Popup */
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  z-index: 1000;
+  text-align: center;
+}
+
+.popup p {
+  margin-bottom: 20px;
+}
+
+.popup button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.popup button:hover {
+  background-color: #0056b3;
+}
+
+.popup button:last-child {
+  background-color: #ff0000;
+}
+
+.popup button:last-child:hover {
+  background-color: #b30000;
+}
+
+
